add_executable(lab5_kernel_main main.c)
add_executable(lab5_kernel_lib_abort lib/abort.c)
add_executable(lab5_kernel_lib_utils lib/utils.c)
add_executable(lab5_kernel_disk kernel/disk.c)
add_executable(lab5_kernel_fs kernel/fs.c)
add_executable(lab5_kernel_i8259 kernel/i8259.c)
add_executable(lab5_kernel_idt kernel/idt.c)
add_executable(lab5_kernel_irqHandle kernel/irqHandle.c)
add_executable(lab5_kernel_keyboard kernel/keyboard.c)
add_executable(lab5_kernel_kvm kernel/kvm.c)
add_executable(lab5_kernel_serial kernel/serial.c)
add_executable(lab5_kernel_timer kernel/timer.c)
add_executable(lab5_kernel_vga kernel/vga.c)

include_directories(include)